Updated the athletics and dining pages to display content fullscreen

--- a/dining.html
+++ b/dining.html
@@ -23,7 +23,7 @@
     <span onclick="openNav()"><img src="images/hamburger-cropped.png" width="25px"><img></span>
 
     <div class="background">
-      <iframe width="100%" height="500" src="https://bluevalleyk12.nutrislice.com/menu/blue-valley-high/lunch/2021-12-06
+      <iframe width="100%" height="1000px" src="https://bluevalleyk12.nutrislice.com/menu/blue-valley-high/lunch/2021-12-06
 "></iframe>
 
     </div>
