--- a/athletics.html
+++ b/athletics.html
@@ -23,19 +23,7 @@
     <span onclick="openNav()"><img src="images/hamburger-cropped.png" width="25px"><img></span>
 
     <div class="background">
-     <div id="adobe-dc-view"></div>
-      <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-      <script type="text/javascript">
-        document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
-          var adobeDCView = new AdobeDC.View({clientId: "2ea17dc0fe43426bb9179d2480c788ff", divId: "adobe-dc-view"});
-          adobeDCView.previewFile({
-            content:{location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/athleticEvents.html"}},
-            metaData:{fileName: "athleticEvents.pdf"}
-          }, {});
-        });
-      </script>
-
-
+     <iframe width="100%" height="1000px" src="https://bvtigers.com/events/12/2021"></iframe>
     </div>
 
 
